--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.play-icon {
+  cursor: pointer;
+  position: absolute;
+  overflow: visible;
+  display: block;
+  height: auto;
+  width: 54px;
+  top: 25px;
+  right: 8px;
+}
